@@ -79,7 +79,7 @@
 	- Manipulated by Controller via ModelController methods
 		- So Controller notifies IUserInterface
 
-- UI Controls:
++ UI Controls:
 	+ Button to save and go back to game (!StandaloneMode)
 	+ Button to quit and go back to game (!StandaloneMode)
 	+ Button to Save (acts also as SaveAs for first save; menu however has also separate SaveAs)
@@ -711,8 +711,8 @@
 		- L shaped: horizontal and vertical
 		- Ruler sticks to the canvas
 		- Only one ruler at a time
-	- Ship bootstrapper from texture
-		- Uses fg and bg color for contour/interior
+	+ Ship bootstrapper from texture
+		+ Uses fg and bg color for contour/interior
 	- Inherits FullScreen state and shares state changes (so, for example, if exits full screen in ShipBuilder, also Game has exited full screen)
 		- How to share state changes? 
 			- FullScreenManager class, shared_ptr in both
