@@ -2,6 +2,8 @@ TODO
 - Improved bulkiness of tsunami's and interactive waves
 	- And added a new setting to customize it at will
 - Improved resolution of ship previews
+- ShipBuilder:
+	- Undo actions survive going back and forth to and from game
 - Added 12 new ships
 
 1.19.2
